@@ -2,6 +2,10 @@ This file contain the log of changes for the main development branch (trunk).
 More detailed information for incremental change can be found in the
 history management of subversion.
 
+2013-xx-yy releases/3.11.2
+        - changed default for option option_file_name to ipopt.opt; specifying an
+          empty string for this option now disables reading of an option file [r2339] 
+
 2013-06-14 releases/3.11.1
         - the setup for the v8-ifort MSVS project changed to use dynamic runtime
           DLLs instead of static linking, which caused crashes in debug mode
